# resistor

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/e_table/: __init__.py  cli.py
src/resistor/: __init__.py  cli.py  solver.py
tests/: test_solver.py
